# personalProjects

./: README.MD  automatedFloorpUpdate.sh  bhashcalc.py  pyproject.toml  system_files.sh  zenUpdater.sh
